fix: added missing favicons and moved heart img down/safari doesn't like the overlap

--- a/app/assets/stylesheets/pages/_products_show.scss
+++ b/app/assets/stylesheets/pages/_products_show.scss
@@ -12,7 +12,7 @@
     #favorite-heart {
       align-self: center;
       text-decoration: none;
-      margin-top: -3vh;
+      margin-top: 0;
       font-size: 3.5em;
       color:#F16767;
       &:hover {
@@ -29,7 +29,7 @@
     #favorited-heart {
       align-self: center;
       text-decoration: none;
-      margin-top: -3vh;
+      margin-top: 0;
       font-size: 3.5em;
       color:#fb8eb6
     }
